--- a/css/components/container.css
+++ b/css/components/container.css
@@ -1,17 +1,34 @@
+body{
+  background-color: #e4d5c6;
+}
+h2{
+color: brown;
+}
+h4{
+  color: brown;
+}
+p{
+  color: back
+}
+
 .banner {
   color: #fff;
   padding: 100px 0;
-  text-shadow: 3 5 10px rgba(0,0,0,1);
+  text-shadow: 3 5 8px #d9b99b;
   text-align: left;
   object-fit: cover;
 }
 
 .banner h1 {
   text-align: justify;
+  color: white;
+  /* background-color: black; */
+  /* width: fit-content; */
 }
 
 .banner p {
-  margin-bottom: 24px;
+  margin-bottom: 20px;
+
 }
 
 .button-beige{
@@ -26,6 +43,9 @@
   transition: #d9b99bb6 3s;
 }
 
+.container{
+  margin-left: 30px;
+}
 .container-1{
   width: 500;
   gap: 24px;
@@ -43,8 +63,9 @@
 }
 
 img{
-  width: 150px;
-  height: 150px;
+  width: 220px;
+  height: 220px;
+  border-radius: 3px;
 }
 
 .card{
@@ -59,6 +80,8 @@ img{
 
 .footer{
   text-align: center;
-  padding: 60px;
+  padding: 36px;
   background-color: #d9b99b;
+  /* padding-top: 20px; */
+  margin-top: 75px;
 }
